--- a/app/assets/new-Manage-kpi.html
+++ b/app/assets/new-Manage-kpi.html
@@ -5,6 +5,7 @@
     <link href="stylesheets/wayne_sunny.css" rel="stylesheet">
     <link href="stylesheets/_epm_base.css" rel="stylesheet">
     <link href="stylesheets/font-awesome.min.css" rel="stylesheet">
+    <link href="stylesheets/aero.css" rel="stylesheet">
     <link href="stylesheets/Manage.css" rel="stylesheet">
     <link href="stylesheets/Manage-kpi.css" rel="stylesheet">
     <title>if kpi</title>
@@ -71,10 +72,10 @@
 
 
 
-    <ul class="manage-left-menu" id="manage-left-menu">
+    <ul class="manage-left-menu" id="manage-left-menu" type="category">
        <li>Manage KPI</li>
-       <li type="category" id="manage-menu-add">
-           <input type="text" placeholder="new category"/>
+       <li id="manage-menu-add">
+           <input type="text" />
            <span><i class="icon-plus"></i> Category</span>
            <p class="manage-add-tooltip">Enter: confirm <br />Esc: cancel</p>
        </li>
@@ -92,6 +93,73 @@
        </li>
     </ul>
 
+    <div class="manage-right-content">
+
+        <div class="manage-btn-group" id="manage-btn-group">
+            <a class="btn btn-primary"><i class="icon-plus"></i> KPI</a>
+            <a class="btn btn-primary kpi-library-btn"><i class="icon-th-list"></i> KPI Library</a>
+            <p id="manage-edit-target" >Category1 </p>
+            <i class="icon-pencil"></i>
+            <input type="text"/>
+            <span>Enter:Confirm&nbsp;&nbsp;&nbsp;&nbsp;Esc:Cancel</span>
+        </div>
+
+
+
+        <div class="manage-right-list">
+            <div class="right-list-top-control" id="right-list-top-control">
+                <input type="checkbox" id="manage-total-check"/>
+                <a class="btn" id="manage-item-remove">Delete</a>
+                <a class="btn" id="manage-item-edit">Edit</a>
+            </div>
+
+
+            <ul id="manage-sort-list" class="manage-sort-list">
+                <li id="1">
+                    <p class="sort-handle">:</p>
+                    <input type="checkbox" />
+                    <table class="category">
+                        <tr>
+                            <td>KPI1</td>
+                            <td>Hour</td>
+                            <td>Up</td>
+                            <td class="manage-kpi-target"><span class="can-change">200</span><span>$</span><input type='text' effect_on="1"/></td>
+                            <td>No</td>
+                        </tr>
+                        <tr>
+                            <td>all the description here</td>
+                            <td>Frequency</td>
+                            <td>Trend</td>
+                            <td>Target</td>
+                            <td>Is Calcu Type</td>
+                        </tr>
+                    </table>
+                </li>
+                <li id="2">
+                    <p class="sort-handle">:</p>
+                    <input type="checkbox" />
+                    <table class="category">
+                        <tr>
+                            <td>KPI2</td>
+                            <td>Hour</td>
+                            <td>Down</td>
+                            <td class="manage-kpi-target"><span class="can-change">100</span><span>$</span><input type='text' effect_on="2"/></td>
+                            <td>No</td>
+                        </tr>
+                        <tr>
+                            <td>all the description here</td>
+                            <td>Frequency</td>
+                            <td>Trend</td>
+                            <td>Target</td>
+                            <td>Is Calcu Type</td>
+                        </tr>
+                    </table>
+                </li>
+            </ul>
+
+
+        </div>
+    </div>
 
 
 
@@ -109,7 +177,16 @@
 <script src="javascripts/wayne-base.js"></script>
 <script src="javascripts/Template.js"></script>
 <script src="javascripts/brilliantech.base.js"></script>
+<script src="javascripts/jquery.ba-resize.min.js"></script>
+<script src="javascripts/jquery.icheck.min.js"></script>
+<script src="javascripts/jquery.sortable.min.js"></script>
 <script src="javascripts/Manage-left-menu.js"></script>
-<script src="javascripts/Mangae-kpi.js"></script>
+<script src="javascripts/Manage-right-list.js"></script>
+<script src="javascripts/Manage.js"></script>
+<<script>
+    $(document).ready(function(){
+        MANAGE_INIT();
+    })
+</script>
 </body>
 </html>
