--- a/app/assets/new-Analytics.html
+++ b/app/assets/new-Analytics.html
@@ -2,13 +2,13 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link href="stylesheets/wzx-bootstrap.css" rel="stylesheet" media="screen">
-    <link href="stylesheets/datepicker.css" rel="stylesheet" media="screen">
     <link href="stylesheets/datetimepicker.css" rel="stylesheet" media="screen">
+    <link href="stylesheets/datepicker.css" rel="stylesheet" media="screen">
     <link href="stylesheets/wayne_sunny.css" rel="stylesheet">
     <link href="stylesheets/_epm_base.css" rel="stylesheet">
     <link href="stylesheets/aero.css" rel="stylesheet">
     <link href="stylesheets/chosen.css" rel="stylesheet">
+    <link href="stylesheets/font-awesome.min.css" rel="stylesheet">
     <link href="stylesheets/Analytic-main.css" rel="stylesheet">
     <title>if kpi</title>
 </head>
@@ -206,7 +206,6 @@
     <p></p>
 </div>
 <script src="javascripts/jquery-1.8.2.min.js"></script>
-<script src="javascripts/bootstrap.min.js"></script>
 <script src="javascripts/bootstrap-datepicker.js" charset="UTF-8"></script>
 <script src="javascripts/bootstrap-datetimepicker.min.js" charset="UTF-8"></script>
 <script src="javascripts/chosen.jquery.min.js"></script>
