--- a/app/assets/new-Manage-kpi.html
+++ b/app/assets/new-Manage-kpi.html
@@ -257,33 +257,13 @@
     <div class="kpi-library" id="kpi-library">
         <div>
             <div class="kpi-library-inner">
-                <div class="left">
-                    <div class="accordion" id="accordion2">
-                        <div class="accordion-group">
-                            <div class="accordion-heading">
-                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-                                    Collapsible Group Item #1
-                                </a>
-                            </div>
-                            <div id="collapseOne" class="accordion-body collapse in">
-                                <div class="accordion-inner">
-                                    Anim pariatur cliche...
-                                </div>
-                            </div>
-                        </div>
-                        <div class="accordion-group">
-                            <div class="accordion-heading">
-                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-                                    Collapsible Group Item #2
-                                </a>
-                            </div>
-                            <div id="collapseTwo" class="accordion-body collapse">
-                                <div class="accordion-inner">
-                                    Anim pariatur cliche...
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                <div class="left Accordion">
+                    <div class="accordion-header accordion-in in">header1</div>
+                    <div class="accordion-body">body1</div>
+                    <div class="accordion-header">header2</div>
+                    <div class="accordion-body">body2</div>
+                    <div class="accordion-header">header3</div>
+                    <div class="accordion-body">body3</div>
                 </div>
                 <div class="right"></div>
             </div>
