html ok(datepicker short choose)

--- a/app/assets/new-Manage-kpi.html
+++ b/app/assets/new-Manage-kpi.html
@@ -257,15 +257,37 @@
     <div class="kpi-library" id="kpi-library">
         <div>
             <div class="kpi-library-inner">
-                <div class="left Accordion">
-                    <div class="accordion-header accordion-in in">header1</div>
-                    <div class="accordion-body">body1</div>
-                    <div class="accordion-header">header2</div>
-                    <div class="accordion-body">body2</div>
-                    <div class="accordion-header">header3</div>
-                    <div class="accordion-body">body3</div>
+                <div class="left Accordion" id="kpi-library-inner-left">
+                    <div class="accordion-header">Category 1</div>
+                    <ul class="accordion-body">
+                       <li>
+                           <input type="checkbox" id="kpilibrary1"/>
+                           <h3 title="KPI1" >KPI 1</h3>
+                           <p title="Description1">Description</p>
+                       </li>
+                        <li>
+                            <input type="checkbox"  id="kpilibrary2"/>
+                            <h3>KPI 2</h3>
+                            <p>Description</p>
+                        </li>
+                    </ul>
+                    <div class="accordion-header">Category 1</div>
+                    <ul class="accordion-body">
+                        <li>
+                            <input type="checkbox"  id="kpilibrary3"/>
+                            <h3 title="KPI1">KPI 3</h3>
+                            <p title="Description1">Description</p>
+                        </li>
+                    </ul>
                 </div>
-                <div class="right"></div>
+                <div class="right">
+                    <ul class="library-chosen-kpi" id="library-chosen-kpi">
+                    </ul>
+                    <div>
+                        <a class="btn" id="library-cancel">Cancel</a>
+                        <a class="btn btn-primary">Add</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
