--- a/app/assets/new-Manage-kpi.html
+++ b/app/assets/new-Manage-kpi.html
@@ -21,7 +21,7 @@
 </aside>
 <article class="wrap-main" id="wrap-main">
     <header>
-        <div class="user-portrait-background pull-left" data-open=true id="user-portrait-background">
+        <div class="user-portrait-background pull-left" state="close" id="user-portrait-background">
             <div class="user-portrait-brand"></div>
             <!--<div class="user-portrait-name">IF-EPM</div>-->
         </div>
