--- a/app/assets/new-Kpi-entry.html
+++ b/app/assets/new-Kpi-entry.html
@@ -193,6 +193,7 @@
 <script src="javascripts/high_chart_template.js"></script>
 <script src="javascripts/Analytics_init.js"></script>
 <script src="javascripts/brilliantech.base.js"></script>
+<script src="javascripts/high_chart_template.js"></script>
 <script src="javascripts/Entry.js"></script>
 <script src="javascripts/Manage.js"></script>
 <script>
