--- a/app/assets/new-Manage-kpi.html
+++ b/app/assets/new-Manage-kpi.html
@@ -172,7 +172,7 @@
         <div class="manage-btn-group" id="manage-btn-group">
             <a class="btn btn-primary" id="kpi-add-show"><i class="icon-plus"></i> KPI</a>
             <a class="btn btn-primary kpi-library-btn" id="kpi-library-btn"><i class="icon-th-list"></i> KPI Library</a>
-            <p id="manage-edit-target" >Category1 </p>
+            <p id="manage-edit-target" ></p>
             <i class="icon-pencil"></i>
             <input type="text"/>
             <span>Enter:Confirm&nbsp;&nbsp;&nbsp;&nbsp;Esc:Cancel</span>
