--- a/app/assets/new-Manage-kpi.html
+++ b/app/assets/new-Manage-kpi.html
@@ -185,7 +185,7 @@
             </div>
 
 
-            <ul id="manage-sort-list" class="manage-sort-list">
+            <ul id="manage-sort-list" class="manage-sort-list" >
                 <li id="1">
                     <p class="sort-handle">:</p>
                     <input type="checkbox" />
@@ -264,6 +264,7 @@
                            <input type="checkbox" id="kpilibrary1" belong="Category 1"/>
                            <h3 title="KPI1" >KPI 1</h3>
                            <p title="Description1">Description</p>
+                           <i class="icon-lightbulb" ></i>
                        </li>
                         <li>
                             <input type="checkbox"  id="kpilibrary2" belong="Category 1"/>
