--- a/app/assets/new-Kpi-entry.html
+++ b/app/assets/new-Kpi-entry.html
@@ -79,10 +79,10 @@
         <li interval="300" show_section="month">
             <a>Month</a>
         </li>
-        <li interval="400" show_section="month">
+        <li class="active" interval="400" show_section="month">
             <a>Quarter</a>
         </li>
-        <li class="active" interval="500" show_section="year">
+        <li interval="500" show_section="year">
             <a>Year</a>
         </li>
     </ul>
