--- a/app/assets/new-Manage-user.html
+++ b/app/assets/new-Manage-user.html
@@ -20,147 +20,100 @@
 
 </aside>
 <article class="wrap-main" id="wrap-main">
-    <header>
-        <div class="user-portrait-background pull-left" state="close" id="user-portrait-background">
-            <div class="user-portrait-brand"></div>
-            <!--<div class="user-portrait-name">IF-EPM</div>-->
-        </div>
-        <nav class="pull-left">
-            <ul>
-                <li><a>
-                    <span>Get Started</span>
-                    <span class="nav-get-started"></span>
-                </a></li>
-                <li><a>
-                    <span>DashBoard</span>
-                    <span class="nav-dash-board"></span>
-                </a></li>
-                <li><a href="new-Analytics.html">
-                    <span>Analytics</span>
-                    <span class="nav-analytics"></span>
-                </a></li>
-                <li><a>
-                    <span>Reports</span>
-                    <span class='nav-report'></span>
-                </a></li>
-                <li class="relative">
-                    <a>
-                        <span>Manage</span>
-                        <span class='nav-manage'></span>
-                    </a>
-                    <ul class="nav-manage-sub">
-                        <li><a>KPIs</a></li>
-                        <li><a>Users</a></li>
-                        <li><a>Views</a></li>
-                        <li><a>Billings</a></li>
-                    </ul>
-                </li>
-                <li><a>
-                    <span>Entry KPIs</span>
-                    <span class="nav-entry-kpi"></span>
-                </a></li>
-            </ul>
-        </nav>
-    </header>
-
-
-
-
-
-    <ul class="manage-left-menu" id="manage-left-menu" type="group">
-        <li>Manage User</li>
-        <li id="manage-menu-add">
-            <input type="text" />
-            <span><i class="icon-plus"></i> Group</span>
-            <p class="manage-add-tooltip">Enter: confirm <br />Esc: cancel</p>
-        </li>
-        <li class="active" title="Group1" number="1">
-            <i class="icon-trash icon-item"></i>
-            <a>Group1</a>
-        </li>
-        <li title="Group2" number="2">
-            <i class="icon-trash icon-item"></i>
-            <a >Group2</a>
-        </li>
-        <li title="Group3" number="3">
-            <i class="icon-trash icon-item"></i>
-            <a>Group3</a>
-        </li>
-    </ul>
-
-
-
-
-
-
-
-
-
-
-    <div class="manage-user-add" id="manage-user-add"  general="manage-user-add">
-        <i class="icon-remove" id="close-add-user"  general="close-user"></i>
-        <div>
-            <input type="text" placeholder="* Name" id="new-user-name" general="user-name"/>
-            <input type="text" placeholder="* Email" id="new-user-mail"  general="user-mail"/>
-            <input type="password" placeholder="* Password" id="new-user-password"/>
-            <input type="password" placeholder="* Password Confirm" id="new-user-password-confirm"/>
-            <label>
-                <input type="radio" name="user-role" data-name="General"  data-role="1"  value="100" checked>
-                General
-            </label>
-            <label>
-                <input type="radio" name="user-role" data-name="Department Manager" data-role="2" value="200">
-                Department Manager
-            </label>
-            <label>
-                <input type="radio" name="user-role" data-name="General Manager" data-role="3" value="300">
-                General Manager
-            </label>
-            <label>
-                <input type="radio" name="user-role" data-name="Administrator" data-role="4" value="400">
-                Administrator
-            </label>
-            <input type="submit" value="Add" class="btn btn-primary" id="manage-user-add-new" />
-        </div>
+<header>
+    <div class="user-portrait-background pull-left" state="close" id="user-portrait-background">
+        <div class="user-portrait-brand"></div>
+        <!--<div class="user-portrait-name">IF-EPM</div>-->
     </div>
+    <nav class="pull-left">
+        <ul>
+            <li><a>
+                <span>Get Started</span>
+                <span class="nav-get-started"></span>
+            </a></li>
+            <li><a>
+                <span>DashBoard</span>
+                <span class="nav-dash-board"></span>
+            </a></li>
+            <li><a href="new-Analytics.html">
+                <span>Analytics</span>
+                <span class="nav-analytics"></span>
+            </a></li>
+            <li><a>
+                <span>Reports</span>
+                <span class='nav-report'></span>
+            </a></li>
+            <li class="relative">
+                <a>
+                    <span>Manage</span>
+                    <span class='nav-manage'></span>
+                </a>
+                <ul class="nav-manage-sub">
+                    <li><a>KPIs</a></li>
+                    <li><a>Users</a></li>
+                    <li><a>Views</a></li>
+                    <li><a>Billings</a></li>
+                </ul>
+            </li>
+            <li><a>
+                <span>Entry KPIs</span>
+                <span class="nav-entry-kpi"></span>
+            </a></li>
+        </ul>
+    </nav>
+</header>
 
 
+<ul class="manage-left-menu" id="manage-left-menu" type="group">
+    <li>Manage User</li>
+    <li id="manage-menu-add">
+        <input type="text"/>
+        <span><i class="icon-plus"></i> Group</span>
+
+        <p class="manage-add-tooltip">Enter: confirm <br/>Esc: cancel</p>
+    </li>
+    <li class="active" title="Group1" number="1">
+        <i class="icon-trash icon-item"></i>
+        <a>Group1</a>
+    </li>
+    <li title="Group2" number="2">
+        <i class="icon-trash icon-item"></i>
+        <a>Group2</a>
+    </li>
+    <li title="Group3" number="3">
+        <i class="icon-trash icon-item"></i>
+        <a>Group3</a>
+    </li>
+</ul>
 
 
+<div class="manage-user-add" id="manage-user-add" general="manage-user-add">
+    <i class="icon-remove" id="close-add-user" general="close-user"></i>
 
-
-
-
-
-
-
-
-
-
-    <div class="manage-user-add" id="user-edit"   general="manage-user-add">
-        <i class="icon-remove" id="close-user-edit"  general="close-user"></i>
-        <div>
-            <input type="text" placeholder="* Name" id="edit-user-name" general="user-name"/>
-            <input type="text" placeholder="* Email" id="edit-user-mail"  general="user-mail"/>
-            <label>
-                <input type="radio" name="edit-user-role" data-name="General"  data-role="1"  value="100" checked>
-                General
-            </label>
-            <label>
-                <input type="radio" name="edit-user-role" data-name="Department Manager" data-role="2" value="200">
-                Department Manager
-            </label>
-            <label>
-                <input type="radio" name="edit-user-role" data-name="General Manager" data-role="3" value="300">
-                General Manager
-            </label>
-            <label>
-                <input type="radio" name="edit-user-role" data-name="Administrator" data-role="4" value="400">
-                Administrator
-            </label>
-            <input type="submit" value="Edit" class="btn btn-primary" id="manage-user-edit-old" />
-        </div>
+    <div>
+        <input type="text" placeholder="* Name" id="new-user-name" general="user-name"/>
+        <input type="text" placeholder="* Email" id="new-user-mail" general="user-mail"/>
+        <input type="password" placeholder="* Password" id="new-user-password"/>
+        <input type="password" placeholder="* Password Confirm" id="new-user-password-confirm"/>
+        <label>
+            <input type="radio" name="user-role" data-name="General" data-role="1" value="100" checked>
+            General
+        </label>
+        <label>
+            <input type="radio" name="user-role" data-name="Department Manager" data-role="2" value="200">
+            Department Manager
+        </label>
+        <label>
+            <input type="radio" name="user-role" data-name="General Manager" data-role="3" value="300">
+            General Manager
+        </label>
+        <label>
+            <input type="radio" name="user-role" data-name="Administrator" data-role="4" value="400">
+            Administrator
+        </label>
+        <input type="submit" value="Add" class="btn btn-primary" id="manage-user-add-new"/>
     </div>
+</div>
 
 
 
@@ -170,163 +123,227 @@
 
 
 
+
+
+<div class="manage-user-add" id="user-edit" general="manage-user-add">
+    <i class="icon-remove" id="close-user-edit" general="close-user"></i>
+
+    <div>
+        <input type="text" placeholder="* Name" id="edit-user-name" general="user-name"/>
+        <input type="text" placeholder="* Email" id="edit-user-mail" general="user-mail"/>
+        <label>
+            <input type="radio" name="edit-user-role" data-name="General" data-role="1" value="100" checked>
+            General
+        </label>
+        <label>
+            <input type="radio" name="edit-user-role" data-name="Department Manager" data-role="2" value="200">
+            Department Manager
+        </label>
+        <label>
+            <input type="radio" name="edit-user-role" data-name="General Manager" data-role="3" value="300">
+            General Manager
+        </label>
+        <label>
+            <input type="radio" name="edit-user-role" data-name="Administrator" data-role="4" value="400">
+            Administrator
+        </label>
+        <input type="submit" value="Edit" class="btn btn-primary" id="manage-user-edit-old"/>
+    </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="assign-kpi-wrap">
     <div id="assign-kpi" class="assign-kpi" special="user">
-         <div class="assign-kpi-top" >
-             <a class="btn">Cancel</a>
-             <a class="btn btn-primary">OK</a>
-             <a class="btn btn-primary"><i class="icon-key"></i> Pick KPI</a>
-             <p>Wayne</p>
-         </div>
+        <div class="assign-kpi-top">
+            <a class="btn" id="assign-kpi-cancel">Cancel</a>
+            <a class="btn btn-primary" id="assign-kpi-ok">OK</a>
+            <a class="btn btn-primary"><i class="icon-key"></i> Pick KPI</a>
 
-
+            <p><span class="normal-blue">Wayne</span><span>'s KPI</span></p>
+        </div>
         <div class="assign-kpi-inner">
             <ul class="left">
                 <li>
                     <h3>KPI 1</h3>
+
+                    <p>some description here</p>
+                    <i class="icon-trash"></i>
+                </li>
+                <li>
+                    <h3>KPI 1</h3>
+
+                    <p>ddd</p>
+                    <i class="icon-trash"></i>
+                </li>
+                <li>
+                    <h3>KPI 1</h3>
+
+                    <p>some description here</p>
+                    <i class="icon-trash"></i>
+                </li>
+            </ul>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <div class="assign-kpi-options" special="user">
+            <i class="icon-remove" id="close-assign-kpi-options"></i>
+
+            <div class="select-div">
+                <select class="chosen-select" data-placeholder="KPI Category">
+                    <option value=""></option>
+                    <option value="200">Up</option>
+                    <option value="100">None</option>
+                    <option value="300">Down</option>
+                </select>
+            </div>
+            <ul>
+                <li>
+                    <h3>KPI 1</h3>
+
                     <p>some description here</p>
                 </li>
                 <li>
                     <h3>KPI 1</h3>
+
                     <p>some description here</p>
                 </li>
                 <li>
                     <h3>KPI 1</h3>
-                    <p>some description here</p>
-                </li>
-                <li>
-                    <h3>KPI 1</h3>
+
                     <p>some description here</p>
                 </li>
             </ul>
         </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
     </div>
 
 
 
-    <div class="assign-kpi-options">
-        <i class="icon-remove" id="close-assign-kpi-options"></i>
-        <div class="select-div">
-            <select class="chosen-select"  data-placeholder="KPI Category" >
-                <option value=""> </option>
-                <option value="200">Up</option>
-                <option value="100">None</option>
-                <option value="300">Down</option>
-            </select>
+
+
+</div>
+
+
+
+
+
+
+
+
+
+
+<div class="manage-right-content" id="manage-right-content">
+    <div class="manage-btn-group" id="manage-btn-group">
+        <a class="btn btn-primary" id="add-user-show"><i class="icon-plus"></i> User</a>
+
+        <p id="manage-edit-target"></p>
+        <i class="icon-pencil"></i>
+        <input type="text"/>
+        <span>Enter:Confirm&nbsp;&nbsp;&nbsp;&nbsp;Esc:Cancel</span>
+    </div>
+
+    <div class="manage-right-list">
+        <div class="right-list-top-control" id="right-list-top-control" name="group">
+            <input type="checkbox" id="manage-total-check"/>
+            <a class="btn" id="manage-item-remove">Delete</a>
+            <a class="btn" id="manage-user-edit">Edit</a>
+            <a class="btn btn-primary" id="manage-user-delivery">Assign KPI</a>
         </div>
-        <ul>
-            <li>
-                <h3>KPI 1</h3>
-                <p>some description here</p>
+
+
+        <ul id="manage-sort-list" class="manage-sort-list">
+            <li id="1">
+                <p class="sort-handle">:</p>
+                <input type="checkbox"/>
+                <table class="group">
+                    <tr>
+                        <td class="user-manage-name">Wayne</td>
+                        <td class="user-manage-authority" value="100">General</td>
+                    </tr>
+                    <tr>
+                        <td class="user-manage-mail">zixiao.wang@cz-tek.com</td>
+                        <td>Authority</td>
+                    </tr>
+                </table>
             </li>
-            <li>
-                <h3>KPI 1</h3>
-                <p>some description here</p>
+            <li id="2">
+                <p class="sort-handle">:</p>
+                <input type="checkbox"/>
+                <table class="group">
+                    <tr>
+                        <td class="user-manage-name">White</td>
+                        <td class="user-manage-authority" value="300">General Manager</td>
+                    </tr>
+                    <tr>
+                        <td class="user-manage-mail">123@163.com</td>
+                        <td>Authority</td>
+                    </tr>
+                </table>
             </li>
-            <li>
-                <h3>KPI 1</h3>
-                <p>some description here</p>
+            <li id="3">
+                <p class="sort-handle">:</p>
+                <input type="checkbox"/>
+                <table class="group">
+                    <tr>
+                        <td class="user-manage-name">Jason</td>
+                        <td class="user-manage-authority" value="200">Department Manger</td>
+                    </tr>
+                    <tr>
+                        <td class="user-manage-mail">sdfa@sina.com</td>
+                        <td>Authority</td>
+                    </tr>
+                </table>
             </li>
         </ul>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <div class="manage-right-content" id="manage-right-content">
-        <div class="manage-btn-group" id="manage-btn-group">
-            <a class="btn btn-primary" id="add-user-show"><i class="icon-plus"></i> User</a>
-            <p id="manage-edit-target" ></p>
-            <i class="icon-pencil"></i>
-            <input type="text"/>
-            <span>Enter:Confirm&nbsp;&nbsp;&nbsp;&nbsp;Esc:Cancel</span>
-        </div>
-
-        <div class="manage-right-list">
-            <div class="right-list-top-control" id="right-list-top-control" name="group">
-                <input type="checkbox" id="manage-total-check" />
-                <a class="btn" id="manage-item-remove">Delete</a>
-                <a class="btn" id="manage-user-edit">Edit</a>
-                <a class="btn btn-primary" id="manage-user-delivery">Assign KPI</a>
-            </div>
-
-
-            <ul id="manage-sort-list" class="manage-sort-list" >
-                <li id="1">
-                    <p class="sort-handle">:</p>
-                    <input type="checkbox" />
-                    <table class="group">
-                        <tr>
-                            <td class="user-manage-name">Wayne</td>
-                            <td class="user-manage-authority" value="100">General</td>
-                        </tr>
-                        <tr>
-                            <td class="user-manage-mail">zixiao.wang@cz-tek.com</td>
-                            <td>Authority</td>
-                        </tr>
-                    </table>
-                </li>
-                <li id="2">
-                    <p class="sort-handle">:</p>
-                    <input type="checkbox" />
-                    <table class="group">
-                        <tr>
-                            <td class="user-manage-name">White</td>
-                            <td class="user-manage-authority" value="300">General Manager</td>
-                        </tr>
-                        <tr>
-                            <td class="user-manage-mail">123@163.com</td>
-                            <td>Authority</td>
-                        </tr>
-                    </table>
-                </li>
-                <li id="3">
-                    <p class="sort-handle">:</p>
-                    <input type="checkbox" />
-                    <table class="group">
-                        <tr>
-                            <td class="user-manage-name">Jason</td>
-                            <td class="user-manage-authority" value="200">Department Manger</td>
-                        </tr>
-                        <tr>
-                            <td class="user-manage-mail">sdfa@sina.com</td>
-                            <td>Authority</td>
-                        </tr>
-                    </table>
-                </li>
-            </ul>
-        </div>
-    </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+</div>
 
 
 </article>
@@ -346,8 +363,9 @@
 <script src="javascripts/Manage.js"></script>
 <script src="javascripts/Manage-kpi.js"></script>
 <script src="javascripts/Manage-user.js"></script>
-<<script>
-    $(document).ready(function(){
+<
+<script>
+    $(document).ready(function () {
         MANAGE.init();
         MANAGE.user.init();
     })
