--- a/app/assets/new-Manage-user.html
+++ b/app/assets/new-Manage-user.html
@@ -64,6 +64,16 @@
 </header>
 
 
+
+
+
+
+
+
+
+
+
+
 <ul class="manage-left-menu" id="manage-left-menu" type="group">
     <li>Manage User</li>
     <li id="manage-menu-add">
@@ -85,6 +95,21 @@
         <a>Group3</a>
     </li>
 </ul>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 <div class="manage-user-add" id="manage-user-add" general="manage-user-add">
@@ -169,30 +194,27 @@
 
 
 
-<div class="assign-kpi-wrap">
+<div class="assign-kpi-wrap" id="assign-kpi-wrap">
     <div id="assign-kpi" class="assign-kpi" special="user">
         <div class="assign-kpi-top">
             <a class="btn" id="assign-kpi-cancel">Cancel</a>
             <a class="btn btn-primary" id="assign-kpi-ok">OK</a>
-            <a class="btn btn-primary"><i class="icon-key"></i> Pick KPI</a>
-
-            <p><span class="normal-blue">Wayne</span><span>'s KPI</span></p>
+            <a class="btn btn-primary" id="assign-kpi-pick"><i class="icon-key"></i> Pick KPI</a>
+            <p><span class="normal-blue"></span><span>'s KPI</span></p>
         </div>
-        <div class="assign-kpi-inner">
+        <div class="assign-kpi-inner" id="assign-kpi-inner">
             <ul class="left">
-                <li>
+                <li id="kpi1">
                     <h3>KPI 1</h3>
-
                     <p>some description here</p>
                     <i class="icon-trash"></i>
                 </li>
-                <li>
+                <li id="kpi2">
                     <h3>KPI 1</h3>
-
                     <p>ddd</p>
                     <i class="icon-trash"></i>
                 </li>
-                <li>
+                <li id="kpi3">
                     <h3>KPI 1</h3>
 
                     <p>some description here</p>
@@ -220,31 +242,27 @@
 
 
 
-        <div class="assign-kpi-options" special="user">
+        <div class="assign-kpi-options" special="user" id="assign-kpi-options">
             <i class="icon-remove" id="close-assign-kpi-options"></i>
 
             <div class="select-div">
-                <select class="chosen-select" data-placeholder="KPI Category">
-                    <option value=""></option>
+                <select class="chosen-select" data-placeholder="KPI Category" id="kpi-category">
                     <option value="200">Up</option>
                     <option value="100">None</option>
                     <option value="300">Down</option>
                 </select>
             </div>
-            <ul>
+            <ul id="assign-kpi-list">
                 <li>
-                    <h3>KPI 1</h3>
-
+                    <h3 kpi_id="kk1">KPI 1</h3>
                     <p>some description here</p>
                 </li>
                 <li>
-                    <h3>KPI 1</h3>
-
+                    <h3 kpi_id="kk2">KPI 1</h3>
                     <p>some description here</p>
                 </li>
                 <li>
-                    <h3>KPI 1</h3>
-
+                    <h3 kpi_id="kk3">KPI 1</h3>
                     <p>some description here</p>
                 </li>
             </ul>
