--- a/app/assets/new-Analytics.html
+++ b/app/assets/new-Analytics.html
@@ -147,36 +147,47 @@
                         <tbody>
                             <tr>
                                 <td width="80px"  align="right">Date:</td>
-                                <td id="chart-detail-date" align="left"></td>
+                                <td id="date" align="left"></td>
                             </tr>
-                            <tr class="hide">
+                            <tr>
+                                <td width="80px"  align="right">From:</td>
+                                <td id="from" align="left"></td>
+                            </tr>
+                            <tr>
                                 <td width="80px"  align="right">To:</td>
-                                <td id="chart-detail-end-date" align="left"></td>
+                                <td id="to" align="left"></td>
                             </tr>
-                            <tr class="hide">
+                            <tr>
                                 <td width="80px"  align="right">Percent:</td>
-                                <td id="chart-detail-percent" align="left"></td>
+                                <td id="percent" align="left"></td>
+                            </tr>
+                            <tr>
+                                <td width="80px"  align="right">Sum Target:</td>
+                                <td id="sum-target" align="left"></td>
+                            </tr>
+                            <tr>
+                                <td width="80px"  align="right">Sum Value:</td>
+                                <td id="sum-value" align="left"></td>
                             </tr>
                             <tr>
                                 <td width="80px"  align="right">Target:</td>
-                                <td id="chart-detail-target" align="left"></td>
-                            </tr>
-                            <tr class="hide">
-                                <td width="80px"  align="right">Aver Target:</td>
-                                <td id="chart-detail-aver-target" align="left"></td>
+                                <td id="target" align="left"></td>
                             </tr>
                             <tr>
                                 <td width="80px"  align="right">Value:</td>
-                                <td id="chart-detail-value" align="left"></td>
+                                <td id="value" align="left"></td>
                             </tr>
-
-                            <tr class="hide">
-                                <td width="80px"  align="right">Aver Value</td>
-                                <td id="chart-detail-aver-date" align="left"></td>
+                            <tr>
+                                <td width="80px"  align="right">Aver Target:</td>
+                                <td id="aver-target" align="left"></td>
+                            </tr>
+                            <tr>
+                                <td width="80px"  align="right">Aver Value:</td>
+                                <td id="aver-value" align="left"></td>
                             </tr>
                             <tr>
                                 <td width="80px"  align="right">TCR:</td>
-                                <td id="chart-detail-tcr" align="left"></td>
+                                <td id="tcr" align="left"></td>
                             </tr>
                         </tbody>
                     </table>
